@@ -2550,9 +2550,9 @@ void SPVM_OP_CHECKER_check_tree(SPVM_COMPILER* compiler, SPVM_OP* op_root, SPVM_
                   const char* package_var_base_name = call_sub->sub->accessor_original_name;
                   char* package_var_name = SPVM_COMPILER_ALLOCATOR_safe_malloc_zero(compiler, 1 + strlen(package_name) + 2 + strlen(package_var_base_name));
                   memcpy(package_var_name, "$", 1);
-                  memcpy(package_var_name, package_name, strlen(package_name));
-                  memcpy(package_var_name, "::", 2);
-                  memcpy(package_var_name, package_var_base_name, strlen(package_var_base_name));
+                  memcpy(package_var_name + 1, package_name, strlen(package_name));
+                  memcpy(package_var_name + 1 + strlen(package_name), "::", 2);
+                  memcpy(package_var_name + 1 + strlen(package_name) + 2, package_var_base_name + 1, strlen(package_var_base_name) - 1);
                   SPVM_OP* op_package_var_name = SPVM_OP_new_op_name(compiler, package_var_name, op_cur->file, op_cur->line);
                   SPVM_OP* op_package_var_access = SPVM_OP_build_package_var_access(compiler, op_package_var_name);
                   op_package_var_access->uv.package_var_access->inline_expansion = 1;
@@ -2583,9 +2583,9 @@ void SPVM_OP_CHECKER_check_tree(SPVM_COMPILER* compiler, SPVM_OP* op_root, SPVM_
                   const char* package_var_base_name = call_sub->sub->accessor_original_name;
                   char* package_var_name = SPVM_COMPILER_ALLOCATOR_safe_malloc_zero(compiler, 1 + strlen(package_name) + 2 + strlen(package_var_base_name));
                   memcpy(package_var_name, "$", 1);
-                  memcpy(package_var_name, package_name, strlen(package_name));
-                  memcpy(package_var_name, "::", 2);
-                  memcpy(package_var_name, package_var_base_name, strlen(package_var_base_name));
+                  memcpy(package_var_name + 1, package_name, strlen(package_name));
+                  memcpy(package_var_name + 1 + strlen(package_name), "::", 2);
+                  memcpy(package_var_name + 1 + strlen(package_name) + 2, package_var_base_name + 1, strlen(package_var_base_name) - 1);
                   SPVM_OP* op_package_var_name = SPVM_OP_new_op_name(compiler, package_var_name, op_cur->file, op_cur->line);
                   SPVM_OP* op_package_var_access = SPVM_OP_build_package_var_access(compiler, op_package_var_name);
                   op_package_var_access->uv.package_var_access->inline_expansion = 1;
