@@ -1,4 +1,26 @@
 package TestCase::CoreFunc::Basic {
+  sub test_true : int () {
+    my $true = TRUE();
+    unless ($true->val == 1) {
+      return 0;
+    }
+    unless ($true == SPVM::Bool->TRUE) {
+      return 0;
+    }
+    return 1;
+  }
+  
+  sub test_false : int () {
+    my $false = FALSE();
+    unless ($false->val == 0) {
+      return 0;
+    }
+    unless ($false == SPVM::Bool->FALSE) {
+      return 0;
+    }
+    return 1;
+  }
+  
   sub test_copy_string : int () {
     my $string = "abc";
     my $string_out = copy_string($string);
